[gd_scene load_steps=24 format=2]

[ext_resource path="res://addons/Popochiu/Editor/Popups/CreateCharacter/CreateCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/Popochiu/Editor/Popups/CreateDialog/CreateDialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/Popochiu/Editor/Popups/CreateRoom/CreateRoom.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/Popochiu/Editor/MainDock/PopochiuGroup/PopochiuGroup.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/Popochiu/Editor/Popups/CreateProp/CreateProp.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/Popochiu/Editor/Popups/CreateInventoryItem/CreateInventoryItem.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/Popochiu/Editor/MainDock/PopochiuDock.gd" type="Script" id=7]
[ext_resource path="res://addons/Popochiu/icons/character.png" type="Texture" id=8]
[ext_resource path="res://addons/Popochiu/icons/dialog.png" type="Texture" id=9]
[ext_resource path="res://addons/Popochiu/icons/room.png" type="Texture" id=10]
[ext_resource path="res://addons/Popochiu/icons/inventory_item.png" type="Texture" id=11]
[ext_resource path="res://addons/Popochiu/Editor/MainDock/TabRoom.tscn" type="PackedScene" id=12]
[ext_resource path="res://addons/Popochiu/Editor/MainDock/TabAudio.tscn" type="PackedScene" id=13]
[ext_resource path="res://addons/Popochiu/Editor/Popups/CreateHotspot/CreateHotspot.tscn" type="PackedScene" id=14]
[ext_resource path="res://addons/Popochiu/Editor/Popups/CreateRegion/CreateRegion.tscn" type="PackedScene" id=15]
[ext_resource path="res://addons/Popochiu/Editor/MainDock/TabSettings.tscn" type="PackedScene" id=16]
[ext_resource path="res://addons/Popochiu/Editor/Popups/DeleteConfirmation/DeleteConfirmation.tscn" type="PackedScene" id=17]

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 12.0
content_margin_right = 12.0
bg_color = Color( 0.180392, 0.172549, 0.607843, 1 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.180392, 0.172549, 0.607843, 1 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 12.0
content_margin_right = 12.0
bg_color = Color( 0.180392, 0.172549, 0.607843, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.180392, 0.172549, 0.607843, 1 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 12.0
content_margin_right = 12.0
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.458824, 0.807843, 0.784314, 1 )

[sub_resource type="Image" id=13]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=12]
flags = 4
flags = 4
image = SubResource( 13 )
size = Vector2( 16, 16 )

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.929412, 0.945098, 0.443137, 0.498039 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.556863, 0.235294, 0.592157, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Popochiu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
script = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 316.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2

[node name="BtnMoveFolders" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
margin_left = 93.0
margin_right = 218.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 4
custom_colors/font_color_pressed = Color( 0.929412, 0.945098, 0.443137, 1 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
text = "Move folders"
icon = SubResource( 12 )

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 312.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false,
"_tab_disabled": false
}

[node name="MainScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Main"]
margin_right = 304.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Main/MainScrollContainer"]
margin_right = 292.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RoomsGroup" parent="MarginContainer/VBoxContainer/TabContainer/Main/MainScrollContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_right = 292.0
icon = ExtResource( 10 )
color = Color( 0.439216, 0.427451, 0.921569, 0.498039 )
title = "Rooms"
create_text = "Create room"

[node name="CharactersGroup" parent="MarginContainer/VBoxContainer/TabContainer/Main/MainScrollContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 28.0
margin_right = 292.0
margin_bottom = 52.0
icon = ExtResource( 8 )
color = Color( 0.929412, 0.945098, 0.443137, 0.498039 )
title = "Characters"
create_text = "Create character"

[node name="ItemsGroup" parent="MarginContainer/VBoxContainer/TabContainer/Main/MainScrollContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 56.0
margin_right = 292.0
margin_bottom = 80.0
icon = ExtResource( 11 )
color = Color( 0.337255, 0.67451, 0.301961, 0.498039 )
title = "Inventory items"
create_text = "Create item"

[node name="DialogsGroup" parent="MarginContainer/VBoxContainer/TabContainer/Main/MainScrollContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 84.0
margin_right = 292.0
margin_bottom = 108.0
icon = ExtResource( 9 )
color = Color( 0.458824, 0.807843, 0.784314, 0.498039 )
title = "Dialogs"
create_text = "Create dialog"

[node name="Room" parent="MarginContainer/VBoxContainer/TabContainer" instance=ExtResource( 12 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
focus_mode = 2

[node name="Audio" parent="MarginContainer/VBoxContainer/TabContainer" instance=ExtResource( 13 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
focus_mode = 2

[node name="Settings" parent="MarginContainer/VBoxContainer/TabContainer" instance=ExtResource( 16 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="FooterPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 312.0
margin_bottom = 172.0
custom_styles/panel = SubResource( 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/FooterPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 308.0
margin_bottom = 26.0
size_flags_vertical = 3
alignment = 2

[node name="BtnDocs" type="Button" parent="MarginContainer/VBoxContainer/FooterPanel/HBoxContainer"]
margin_left = 138.0
margin_right = 304.0
margin_bottom = 22.0
hint_tooltip = "Opens wiki in web browser"
text = "Open documentation"
icon = SubResource( 12 )

[node name="Popups" type="Control" parent="."]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateRoom" parent="Popups" instance=ExtResource( 3 )]
margin_right = 597.0
margin_bottom = 270.0

[node name="CreateCharacter" parent="Popups" instance=ExtResource( 1 )]
margin_right = 720.0

[node name="CreateInventoryItem" parent="Popups" instance=ExtResource( 6 )]
margin_right = 673.0
margin_bottom = 270.0

[node name="CreateDialog" parent="Popups" instance=ExtResource( 2 )]
margin_right = 639.0
margin_bottom = 270.0

[node name="CreateProp" parent="Popups" instance=ExtResource( 5 )]

[node name="CreateHotspot" parent="Popups" instance=ExtResource( 14 )]

[node name="CreateRegion" parent="Popups" instance=ExtResource( 15 )]

[node name="DeleteConfirmation" parent="Popups" instance=ExtResource( 17 )]
